# dimple-qc-app

./: .dockerignore  .gitignore  Dockerfile  FKYSRV_1_PXR2.fasta  FKYSRV_1_PXR2.tsv  LICENSE  README.md  _brand.yml  app.py  asgi.py  bad_ref.fasta  deploy.yaml  evaluate_data.py  input_checkbox_group_tooltips.py  main.py  manifest.json  per_base_df.csv  per_base_io.py  ploomber-cloud.json  plotly_plots.py  plots.py  process_data.py  process_reference.py  pyproject.toml  requirements.txt  shared.py  styles.css  validation.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
deploy/: Caddyfile  README.md  setup-server.sh
tests/: conftest.py  test_evaluate_data.py  test_per_base_io.py  test_plotly_plots.py  test_process_data.py  test_process_reference.py  test_session_isolation.py  test_validation.py
