[project]
name = "dimple-qc-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.87",
    "faicons>=0.2.2",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shiny>=1.6.0",
    "shinywidgets>=0.7.1",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
