[project]
name = "dimple-qc-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.87",
    "faicons>=0.2.2",
    "kaleido>=1.3.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "shiny>=1.6.3",
    "shinywidgets>=0.8.1",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
